kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: kris-sandbox-service
  name: kris-sandbox-service
spec:
  ports:
  - name: exposed-port
    port: 80
    targetPort: 8888
  selector:
    name: kris-sandbox
